# corepc

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  TODO.md  justfile
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: lib.rs
client/src/bdk_client/: mod.rs  rpcs.rs
client/src/client_async/: auth.rs  bdk_client.rs  blocking.rs  blocking_bridges.rs  client.rs  error.rs  mod.rs  rpcs.rs
client/src/client_async/jsonrpc_async/: client_async.rs  mod.rs
client/src/client_async/v17/: blockchain.rs  mod.rs  network.rs  raw_transactions.rs
client/src/client_async/v18/: mod.rs
client/src/client_async/v19/: blockchain.rs  mod.rs
client/src/client_async/v20/: mod.rs
client/src/client_async/v21/: blockchain.rs  mod.rs
client/src/client_async/v22/: mod.rs
client/src/client_async/v23/: mod.rs
client/src/client_async/v24/: mod.rs
client/src/client_async/v25/: mod.rs
client/src/client_async/v26/: mod.rs
client/src/client_async/v27/: mod.rs
client/src/client_async/v28/: mod.rs
client/src/client_async/v29/: mod.rs
client/src/client_async/v30/: blockchain.rs  blocking.rs  control.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  signer.rs  util.rs  wallet.rs
client/src/client_async/v31/: blockchain.rs  blocking.rs  control.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  signer.rs  util.rs  wallet.rs
client/src/client_sync/: error.rs  mod.rs  v20.rs  v24.rs  v25.rs  v27.rs
client/src/client_sync/jsonrpc_sync/: client.rs  error.rs  mod.rs
client/src/client_sync/v17/: blockchain.rs  generating.rs  hidden.rs  mod.rs  network.rs  util.rs  wallet.rs
client/src/client_sync/v18/: blockchain.rs  mod.rs  network.rs
client/src/client_sync/v19/: blockchain.rs  mod.rs
client/src/client_sync/v20/: generating.rs  mod.rs  network.rs  wallet.rs
client/src/client_sync/v21/: blockchain.rs  mod.rs  wallet.rs
client/src/client_sync/v22/: mod.rs  wallet.rs
client/src/client_sync/v23/: blockchain.rs  mod.rs  wallet.rs
client/src/client_sync/v24/: mod.rs
client/src/client_sync/v25/: blockchain.rs  mod.rs
client/src/client_sync/v26/: hidden.rs  mod.rs  network.rs
client/src/client_sync/v27/: hidden.rs  mod.rs
client/src/client_sync/v28/: blockchain.rs  mod.rs
client/src/client_sync/v29/: blockchain.rs  mining.rs  mod.rs
client/src/client_sync/v30/: blockchain.rs  mod.rs
client/src/client_sync/v31/: blockchain.rs  mod.rs
client/tests/: client_async_stub.rs
codegen/: .gitignore  Cargo.toml  README.md  justfile
codegen/docs/: DESIGN.md  NAMING.md  RENAMES.md
codegen/specs/: README.md  v17_2_0_openrpc.json  v18_1_0_openrpc.json  v19_2_0_openrpc.json  v20_2_0_openrpc.json  v21_2_0_openrpc.json  v22_1_0_openrpc.json  v23_2_0_openrpc.json  v24_2_0_openrpc.json  v25_2_0_openrpc.json  v26_2_0_openrpc.json  v27_2_0_openrpc.json  v28_2_0_openrpc.json  v29_0_0_openrpc.json  v30_2_0_openrpc.json  v31_0_0_openrpc.json
codegen/src/: codegen.rs  into_model.rs  lib.rs  main.rs  names.rs  spec.rs
codegen/src/codegen/: blocking.rs  emit.rs  lower.rs  mod.rs
codegen/src/into_model/: convert.rs  emit.rs  mod.rs  tables.rs
electrsd/: CHANGELOG.md  Cargo.toml  README.md  build.rs
electrsd/contrib/: test_vars.sh
electrsd/src/: error.rs  ext.rs  lib.rs  versions.rs
jsonrpc/: CHANGELOG.md  Cargo.toml
jsonrpc/contrib/: test_vars.sh
jsonrpc/src/: client_async.rs  client_sync.rs  lib.rs  simple_tcp.rs  simple_uds.rs
jsonrpc/src/http/: bitreq_http.rs  bitreq_http_async.rs  bitreq_http_sync.rs  mod.rs  simple_http.rs
types/: CHANGELOG.md  Cargo.toml  README.md
types/src/: lib.rs  reconstruct.rs
types/src/model/: blockchain.rs  generating.rs  hidden.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  util.rs  wallet.rs
types/src/psbt/: decode.rs  error.rs  mod.rs
types/src/v17/: control.rs  generating.rs  mod.rs
types/src/v17/blockchain/: error.rs  into.rs  mod.rs
types/src/v17/hidden/: error.rs  into.rs
types/src/v17/mining/: error.rs  into.rs  mod.rs
types/src/v17/network/: error.rs  mod.rs
types/src/v17/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v17/util/: error.rs  into.rs  mod.rs
types/src/v17/wallet/: error.rs  into.rs  mod.rs
types/src/v18/: blockchain.rs  mod.rs
types/src/v18/blockchain/: into.rs  mod.rs
types/src/v18/network/: mod.rs
types/src/v18/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v18/wallet/: error.rs  into.rs  mod.rs
types/src/v19/: mod.rs
types/src/v19/blockchain/: error.rs  into.rs  mod.rs
types/src/v19/network/: mod.rs
types/src/v19/raw_transactions/: into.rs  mod.rs
types/src/v19/wallet/: into.rs  mod.rs
types/src/v20/: control.rs  generating.rs  mod.rs  network.rs  wallet.rs
types/src/v20/util/: into.rs  mod.rs
types/src/v20/wallet/: error.rs  into.rs  mod.rs
types/src/v21/: mod.rs
types/src/v21/blockchain/: into.rs  mod.rs
types/src/v21/generating/: into.rs  mod.rs
types/src/v21/network/: mod.rs
types/src/v21/raw_transactions/: error.rs  into.rs
types/src/v21/wallet/: error.rs  into.rs  mod.rs
types/src/v22/: blockchain.rs  mod.rs  network.rs
types/src/v22/blockchain/: into.rs  mod.rs
types/src/v22/hidden/: into.rs  mod.rs
types/src/v22/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v22/wallet/: into.rs
types/src/v23/: blockchain.rs  control.rs  mod.rs  network.rs
types/src/v23/blockchain/: error.rs  into.rs  mod.rs
types/src/v23/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v23/util/: into.rs  mod.rs
types/src/v23/wallet/: error.rs  into.rs  mod.rs
types/src/v24/: mod.rs  network.rs
types/src/v24/blockchain/: error.rs  into.rs  mod.rs
types/src/v24/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v25/: blockchain.rs  control.rs  mod.rs
types/src/v26/: control.rs  hidden.rs  mining.rs  mod.rs  network.rs
types/src/v27/: mining.rs  mod.rs
types/src/v28/: blockchain.rs  control.rs  mining.rs  mod.rs  network.rs  wallet.rs
types/src/v29/: mod.rs
types/src/v30/: mod.rs
types/src/v31/: control.rs  mod.rs  network.rs
types/tests/: into_model.rs
(+177 files in other folders)
