[workspace]
members = ["client", "types", "node" , "verify", "jsonrpc"]
exclude = ["integration_test"]
resolver = "2"

[patch.crates-io.corepc-client]
path = "client"

[patch.crates-io.corepc-types]
path = "types"

[patch.crates-io.corepc-node]
path = "node"

[patch.crates-io.jsonrpc]
path = "jsonrpc"
