[workspace]
members = ["bitcoind", "bitreq", "client", "electrsd", "fuzz", "jsonrpc", "types"]
exclude = ["integration_test", "verify"]
resolver = "2"

[workspace.metadata.rbmt.toolchains]
nightly = "nightly-2025-09-12"
stable = "1.94.1"

[workspace.metadata.rbmt.integration]
package = "integration-test"
versions = [
    "31_0",
    "30_2",
    "30_0",
    "29_0",
    "28_2",
    "28_1",
    "28_0",
    "27_2",
    "27_1",
    "27_0",
    "26_2",
    "25_2",
    "24_2",
    "23_2",
    "22_1",
    "0_21_2",
    "0_20_2",
    "0_19_1",
    "0_18_1",
    "0_17_2",
]

[patch.crates-io]
# The compat layer branch: https://github.com/rust-bitcoin/rust-bitcoin/pull/6259
bitcoin = { git = "https://github.com/tcharding/rust-bitcoin", branch = "push-pwqxwuswpnsz" }
