[package]
name = "corepc-client"
version = "0.5.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enable this feature to get a blocking JSON-RPC client.
client-sync = ["jsonrpc"]

[dependencies]
bitcoin = { workspace = true, features = ["std", "serde"] }
types = { package = "corepc-types", version = "0.5.0", default-features = false, features = [] }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }

jsonrpc = { workspace = true, features = ["minreq_http"], optional = true }

[dev-dependencies]
