[package]
name = "corepc-client"
version = "0.11.0"
authors = ["Tobin C. Harding <me@tobin.cc>", "Jamil Lambert <Jamil.Lambert@proton.me>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enable this feature to get a blocking JSON-RPC client.
client-sync = ["base64", "bitreq"]

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
log = "0.4"
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
types = { package = "corepc-types", version = "0.11.0", path = "../types", default-features = false, features = ["std"] }

base64 = { version = "0.22.1", optional = true }
bitreq = { version = "0.3.0", path = "../bitreq", features = ["json-using-serde"], optional = true }

[dev-dependencies]
