[package]
name = "corepc-client"
version = "0.15.0"
authors = ["Tobin C. Harding <me@tobin.cc>", "Jamil Lambert <Jamil.Lambert@proton.me>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rbmt.lint]
# `base64`: bitcoin (via corepc-types) uses v0.21 while jsonrpc uses v0.22.
allowed_duplicates = ["base64"]

[features]
# Enable this feature to get a blocking JSON-RPC client.
client-sync = ["jsonrpc"]
# Enable this feature to get the async production JSON-RPC client.
#
# Pulls in `jsonrpc` with its async `bitreq` HTTP transport and the `corepc-types`
# raw types for the active version feature (e.g. `30_0`, default).
client-async = ["jsonrpc", "jsonrpc/bitreq_http_async", "30_0"]
# A blocking, sync-API facade over the async client (drives it on a single-thread runtime). It
# reuses the sync client's method macros, so the sync integration tests run unchanged against the
# async transport.
blocking = ["client-sync", "client-async", "dep:tokio"]

# Bitcoin Core version selection for the async client. v30 is the only generated
# version today; more features are added here as their bindings are generated.
"30_0" = []

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
log = "0.4"
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117" }
types = { package = "corepc-types", version = "0.14.0", path = "../types", default-features = false, features = ["std"] }

jsonrpc = { version = "0.20.0", path = "../jsonrpc", features = ["bitreq_http"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
