[package]
name = "electrsd"
version = "0.37.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest electrs process, useful in integration testing environment"
repository = "https://github.com/RCasatta/electrsd"
documentation = "https://docs.rs/elecrtsd/"
license = "MIT"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
bitcoind = { version = "0.37.0", path = "../bitcoind" }
corepc-client = { version = "0.12.0", path = "../client" }
electrum-client = { version = "0.24.0", default-features = false }
log = { version = "0.4" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.25.0" }

[dev-dependencies]
env_logger = { version = "0.10" }

[build-dependencies]
bitcoin_hashes = { version = "0.14", optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = [
  "bzip2",
  "deflate",
] }
minreq = { version = "2.9.0", default-features = false, optional = true, features = [
  "https",
] }

[features]
legacy = []

# download is not supposed to be used directly only through selecting one of the version feature
download = ["bitcoin_hashes", "zip", "minreq"]

esplora_a33e97e1 = ["download", "legacy"]
electrs_0_8_10 = ["download"]
electrs_0_9_1 = ["download"]
electrs_0_9_11 = ["download"]
electrs_0_10_6 = ["download"]

bitcoind_30_2 = ["bitcoind/download", "bitcoind/30_2"]
bitcoind_29_0 = ["bitcoind/download", "bitcoind/29_0"]
bitcoind_28_2 = ["bitcoind/download", "bitcoind/28_2"]
bitcoind_27_2 = ["bitcoind/download", "bitcoind/27_2"]
bitcoind_26_2 = ["bitcoind/download", "bitcoind/26_2"]
bitcoind_25_2 = ["bitcoind/download", "bitcoind/25_2"]
bitcoind_24_2 = ["bitcoind/download", "bitcoind/24_2"]
bitcoind_23_1 = ["bitcoind/download", "bitcoind/23_2"]
bitcoind_22_1 = ["bitcoind/download", "bitcoind/22_1"]
bitcoind_0_21_2 = ["bitcoind/download", "bitcoind/0_21_2"]
bitcoind_0_20_2 = ["bitcoind/download", "bitcoind/0_20_2"]
bitcoind_0_19_1 = ["bitcoind/download", "bitcoind/0_19_1"]
bitcoind_0_18_1 = ["bitcoind/download", "bitcoind/0_18_1"]
bitcoind_0_17_2 = ["bitcoind/download", "bitcoind/0_17_2"]
