[package]
name = "jsonrpc"
version = "0.18.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoind-json-rpc/"
documentation = "https://docs.rs/jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "simple_http", "simple_tcp" ]
# A bare-minimum HTTP transport.
simple_http = [ "base64" ]
# A transport that uses `minreq` as the HTTP client.
minreq_http = [ "base64", "minreq" ]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []
# Enable Socks5 Proxy in transport
proxy = ["socks"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }

base64 = { workspace = true, optional = true }
minreq = { workspace = true, features = ["json-using-serde"], optional = true }
socks = { workspace = true, optional = true }

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(jsonrpc_fuzz)'] }
