[package]
name = "corepc-types"
version = "0.5.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC API types"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["bitcoin/std"]

[dependencies]
bitcoin = { workspace = true, features = ["serde", "base64"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }

[dev-dependencies]
