[package]
name = "corepc-types"
version = "0.11.0"
authors = ["Tobin C. Harding <me@tobin.cc>", "Jamil Lambert <Jamil.Lambert@proton.me>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC API types"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["bitcoin/std", "encoding/std", "hex-unstable/std", "p2p/std"]
serde-deny-unknown-fields = []

[dependencies]
# Branch `corepc`. hex stuff plus RC stuff (#5704, #5657, and #5710)
bitcoin = { version = "0.33.0-beta", path = "../../rust-bitcoin/bitcoin", default-features = false, features = ["serde", "base64", "secp-recovery"] }
encoding = { package = "bitcoin-consensus-encoding", path = "../../rust-bitcoin/consensus_encoding", default-features = false }        
hex-unstable = { package = "hex-conservative", version = "0.3.0", default-features = false }
p2p = { package = "bitcoin-p2p-messages", path = "../../rust-bitcoin/p2p", default-features = false }
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117" }

[dev-dependencies]

[lints.rust]
missing_debug_implementations = "deny"
